gen/com/chonwhite/mips/assembler/antrl/MipsAsmParser.java
// Generated from /Users/baidu/test/Java_LongFormASR_1.0.0001.0/MIPSSimulator/antlr/MipsAsm.g4 by ANTLR 4.7
package com.chonwhite.mips.assembler.antrl;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MipsAsmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, WS=54, NEWLINE=55, COMMENT=56, NUM=57, HEX_NUM=58, ALPHA=59, 
		NAME=60, IMM_REG=61, S_REG=62, T_REG=63, V_REG=64, A_REG=65, K_REG=66;
	public static final int
		RULE_prog = 0, RULE_text_segment = 1, RULE_data_segment = 2, RULE_iden = 3, 
		RULE_label = 4, RULE_reg = 5, RULE_usigned_imm = 6, RULE_signed_imm = 7, 
		RULE_stat = 8, RULE_op_add = 9, RULE_op_addu = 10, RULE_op_sub = 11, RULE_op_and = 12, 
		RULE_op_or = 13, RULE_op_nor = 14, RULE_op_xor = 15, RULE_op_nand = 16, 
		RULE_op_slt = 17, RULE_op_sll = 18, RULE_op_srl = 19, RULE_op_sra = 20, 
		RULE_op_jr = 21, RULE_instr_r = 22, RULE_op_addi = 23, RULE_op_addiu = 24, 
		RULE_op_lw = 25, RULE_op_lh = 26, RULE_op_lhu = 27, RULE_op_lb = 28, RULE_op_lbu = 29, 
		RULE_op_sw = 30, RULE_op_sh = 31, RULE_op_sb = 32, RULE_op_lui = 33, RULE_op_andi = 34, 
		RULE_op_ori = 35, RULE_op_nori = 36, RULE_op_slti = 37, RULE_op_beq = 38, 
		RULE_op_bne = 39, RULE_op_bgtz = 40, RULE_instr_i = 41, RULE_op_j = 42, 
		RULE_op_jal = 43, RULE_instr_j = 44, RULE_op_syscall = 45, RULE_instr_s = 46, 
		RULE_op_ble = 47, RULE_op_blt = 48, RULE_op_bge = 49, RULE_op_bgt = 50, 
		RULE_op_li = 51, RULE_op_la = 52, RULE_op_move = 53, RULE_instr_p = 54, 
		RULE_op_halt = 55, RULE_instr = 56, RULE_segment = 57;
	public static final String[] ruleNames = {
		"prog", "text_segment", "data_segment", "iden", "label", "reg", "usigned_imm", 
		"signed_imm", "stat", "op_add", "op_addu", "op_sub", "op_and", "op_or", 
		"op_nor", "op_xor", "op_nand", "op_slt", "op_sll", "op_srl", "op_sra", 
		"op_jr", "instr_r", "op_addi", "op_addiu", "op_lw", "op_lh", "op_lhu", 
		"op_lb", "op_lbu", "op_sw", "op_sh", "op_sb", "op_lui", "op_andi", "op_ori", 
		"op_nori", "op_slti", "op_beq", "op_bne", "op_bgtz", "instr_i", "op_j", 
		"op_jal", "instr_j", "op_syscall", "instr_s", "op_ble", "op_blt", "op_bge", 
		"op_bgt", "op_li", "op_la", "op_move", "instr_p", "op_halt", "instr", 
		"segment"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'.text'", "'.data'", "':'", "'$zero'", "'$sp'", "'$fp'", "'$ra'", 
		"'-'", "'add'", "','", "'addu'", "'sub'", "'and'", "'or'", "'nor'", "'xor'", 
		"'nand'", "'slt'", "'sll'", "'srl'", "'sra'", "'jr'", "'addi'", "'addiu'", 
		"'lw'", "'('", "')'", "'lh'", "'lhu'", "'lb'", "'lbu'", "'sw'", "'sh'", 
		"'sb'", "'lui'", "'andi'", "'ori'", "'nori'", "'slti'", "'beq'", "'bne'", 
		"'bgtz'", "'j'", "'jal'", "'syscall'", "'ble'", "'blt'", "'bge'", "'bgt'", 
		"'li'", "'la'", "'move'", "'halt'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "WS", "NEWLINE", "COMMENT", "NUM", 
		"HEX_NUM", "ALPHA", "NAME", "IMM_REG", "S_REG", "T_REG", "V_REG", "A_REG", 
		"K_REG"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MipsAsm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MipsAsmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MipsAsmListener ) ((MipsAsmListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MipsAsmListener ) ((MipsAsmListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(116);
				stat();
				}
				}
				setState(119); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__40) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << T__49) | (1L << T__50) | (1L << T__51) | (1L << T__52) | (1L << NEWLINE) | (1L << COMMENT) | (1L << NAME))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Text_segmentContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(MipsAsmParser.NEWLINE, 0); }
		public Text_segmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_text_segment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MipsAsmListener ) ((MipsAsmListener)listener).enterText_segment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MipsAsmListener ) ((MipsAsmListener)listener).exitText_segment(this);
		}
	}

	public final Text_segmentContext text_segment() throws RecognitionException {
		Text_segmentContext _localctx = new Text_segmentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_text_segment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(T__0);
			setState(122);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Data_segmentContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(MipsAsmParser.NEWLINE, 0); }
		public Data_segmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data_segment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MipsAsmListener ) ((MipsAsmListener)listener).enterData_segment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MipsAsmListener ) ((MipsAsmListener)listener).exitData_segment(this);
		}
	}

	public final Data_segmentContext data_segment() throws RecognitionException {
		Data_segmentContext _localctx = new Data_segmentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_data_segment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(T__1);
			setState(125);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdenContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(MipsAsmParser.NAME, 0); }
		public IdenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iden; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MipsAsmListener ) ((MipsAsmListener)listener).enterIden(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MipsAsmListener ) ((MipsAsmListener)listener).exitIden(this);
		}
	}

	public final IdenContext iden() throws RecognitionException {
		IdenContext _localctx = new IdenContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_iden);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LabelContext extends ParserRuleContext {
		public IdenContext iden() {
			return getRuleContext(IdenContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(MipsAsmParser.NEWLINE, 0); }
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public LabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MipsAsmListener ) ((MipsAsmListener)listener).enterLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MipsAsmListener ) ((MipsAsmListener)listener).exitLabel(this);
		}
	}

	public final LabelContext label() throws RecognitionException {
		LabelContext _localctx = new LabelContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_label);
		try {
			setState(145);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(129);
				iden();
				setState(130);
				match(T__2);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				iden();
				setState(133);
				match(T__2);
				setState(134);
				match(NEWLINE);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(136);
				iden();
				setState(137);
				match(T__2);
				setState(138);
				match(NEWLINE);
				setState(139);
				stat();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(141);
				iden();
				setState(142);
				match(T__2);
				setState(143);
				stat();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RegContext extends ParserRuleContext {
		public TerminalNode S_REG() { return getToken(MipsAsmParser.S_REG, 0); }
		public TerminalNode T_REG() { return getToken(MipsAsmParser.T_REG, 0); }
		public TerminalNode A_REG() { return getToken(MipsAsmParser.A_REG, 0); }
		public TerminalNode V_REG() { return getToken(MipsAsmParser.V_REG, 0); }
		public TerminalNode K_REG() { return getToken(MipsAsmParser.K_REG, 0); }
		public TerminalNode IMM_REG() { return getToken(MipsAsmParser.IMM_REG, 0); }
		public RegContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MipsAsmListener ) ((MipsAsmListener)listener).enterReg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MipsAsmListener ) ((MipsAsmListener)listener).exitReg(this);
		}
	}

	public final RegContext reg() throws RecognitionException {
		RegContext _localctx = new RegContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_reg);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			_la = _input.LA(1);
			if ( !(((((_la - 4)) & ~0x3f) == 0 && ((1L << (_la - 4)) & ((1L << (T__3 - 4)) | (1L << (T__4 - 4)) | (1L << (T__5 - 4)) | (1L << (T__6 - 4)) | (1L << (IMM_REG - 4)) | (1L << (S_REG - 4)) | (1L << (T_REG - 4)) | (1L << (V_REG - 4)) | (1L << (A_REG - 4)) | (1L << (K_REG - 4)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Usigned_immContext extends ParserRuleContext {
		public TerminalNode NUM() { return getToken(MipsAsmParser.NUM, 0); }
		public TerminalNode HEX_NUM() { return getToken(MipsAsmParser.HEX_NUM, 0); }
		public Usigned_immContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_usigned_imm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MipsAsmListener ) ((MipsAsmListener)listener).enterUsigned_imm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MipsAsmListener ) ((MipsAsmListener)listener).exitUsigned_imm(this);
		}
	}

	public final Usigned_immContext usigned_imm() throws RecognitionException {
		Usigned_immContext _localctx = new Usigned_immContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_usigned_imm);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			_la = _input.LA(1);
			if ( !(_la==NUM || _la==HEX_NUM) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Signed_immContext extends ParserRuleContext {
		public Usigned_immContext usigned_imm() {
			return getRuleContext(Usigned_immContext.class,0);
		}
		public Signed_immContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_signed_imm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MipsAsmListener ) ((MipsAsmListener)listener).enterSigned_imm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MipsAsmListener ) ((MipsAsmListener)listener).exitSigned_imm(this);
		}
	}

	public final Signed_immContext signed_imm() throws RecognitionException {
		Signed_immContext _localctx = new Signed_immContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_signed_imm);
		try {
			setState(154);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				enterOuterAlt(_localctx, 1);
				{
				setState(151);
				match(T__7);
				setState(152);
				usigned_imm();
				}
				break;
			case NUM:
			case HEX_NUM:
				enterOuterAlt(_localctx, 2);
				{
				setState(153);
				usigned_imm();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public InstrContext instr() {
			return getRuleContext(InstrContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(MipsAsmParser.NEWLINE, 0); }
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public TerminalNode COMMENT() { return getToken(MipsAsmParser.COMMENT, 0); }
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MipsAsmListener ) ((MipsAsmListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MipsAsmListener ) ((MipsAsmListener)listener).exitStat(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_stat);
		try {
			setState(169);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(156);
				instr(0);
				setState(157);
				match(NEWLINE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(159);
				instr(0);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(160);
				label();
				setState(161);
				instr(0);
				setState(162);
				match(NEWLINE);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(164);
				label();
				setState(165);
				instr(0);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(167);
				match(NEWLINE);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(168);
				match(COMMENT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Op_addContext extends ParserRuleContext {
		public RegContext rd;
		public RegContext rs;
		public RegContext rt;
		public List<RegContext> reg() {
			return getRuleContexts(RegContext.class);
		}
		public RegContext reg(int i) {
			return getRuleContext(RegContext.class,i);
		}
		public Op_addContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_op_add; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MipsAsmListener ) ((MipsAsmListener)listener).enterOp_add(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MipsAsmListener ) ((MipsAsmListener)listener).exitOp_add(this);
		}
	}

	public final Op_addContext op_add() throws RecognitionException {
		Op_addContext _localctx = new Op_addContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_op_add);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			match(T__8);
			setState(172);
			((Op_addContext)_localctx).rd = reg();
			setState(173);
			match(T__9);
			setState(174);
			((Op_addContext)_localctx).rs = reg();
			setState(175);
			match(T__9);
			setState(176);
			((Op_addContext)_localctx).rt = reg();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Op_adduContext extends ParserRuleContext {
		public RegContext rd;
		public RegContext rs;
		public RegContext rt;
		public List<RegContext> reg() {
			return getRuleContexts(RegContext.class);
		}
		public RegContext reg(int i) {
			return getRuleContext(RegContext.class,i);
		}
		public Op_adduContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_op_addu; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MipsAsmListener ) ((MipsAsmListener)listener).enterOp_addu(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MipsAsmListener ) ((MipsAsmListener)listener).exitOp_addu(this);
		}
	}

	public final Op_adduContext op_addu() throws RecognitionException {
		Op_adduContext _localctx = new Op_adduContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_op_addu);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			match(T__10);
			setState(179);
			((Op_adduContext)_localctx).rd = reg();
			setState(180);
			match(T__9);
			setState(181);
			((Op_adduContext)_localctx).rs = reg();
			setState(182);
			match(T__9);
			setState(183);
			((Op_adduContext)_localctx).rt = reg();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Op_subContext extends ParserRuleContext {
		public RegContext rd;
		public RegContext rs;
		public RegContext rt;
		public List<RegContext> reg() {
			return getRuleContexts(RegContext.class);
		}
		public RegContext reg(int i) {
			return getRuleContext(RegContext.class,i);
		}
		public Op_subContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_op_sub; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MipsAsmListener ) ((MipsAsmListener)listener).enterOp_sub(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MipsAsmListener ) ((MipsAsmListener)listener).exitOp_sub(this);
		}
	}

	public final Op_subContext op_sub() throws RecognitionException {
		Op_subContext _localctx = new Op_subContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_op_sub);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185);
			match(T__11);
			setState(186);
			((Op_subContext)_localctx).rd = reg();
			setState(187);
			match(T__9);
			setState(188);
			((Op_subContext)_localctx).rs = reg();
			setState(189);
			match(T__9);
			setState(190);
			((Op_subContext)_localctx).rt = reg();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Op_andContext extends ParserRuleContext {
		public RegContext rd;
		public RegContext rs;
		public RegContext rt;
		public List<RegContext> reg() {
			return getRuleContexts(RegContext.class);
		}
		public RegContext reg(int i) {
			return getRuleContext(RegContext.class,i);
		}
		public Op_andContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_op_and; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MipsAsmListener ) ((MipsAsmListener)listener).enterOp_and(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MipsAsmListener ) ((MipsAsmListener)listener).exitOp_and(this);
		}
	}

	public final Op_andContext op_and() throws RecognitionException {
		Op_andContext _localctx = new Op_andContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_op_and);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			match(T__12);
			setState(193);
			((Op_andContext)_localctx).rd = reg();
			setState(194);
			match(T__9);
			setState(195);
			((Op_andContext)_localctx).rs = reg();
			setState(196);
			match(T__9);
			setState(197);
			((Op_andContext)_localctx).rt = reg();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
